--- a/index.Rmd
+++ b/index.Rmd
@@ -10,11 +10,16 @@ links:
     url: "thalassa@stanford.edu"
   - label: ORCID
     url: "http://orcid.org/0000-0003-2429-8879"
-output:
-  postcards::trestles
+#output:
+ # postcards::trestles
 site: distill::distill_website
 ---
 I am an oceanographer-turned-librarian with a passion for rescuing old data. Observations from the past are critical in being able to put current changes into context. We can’t go back in time to make observations over again - we must preserve and share as much as we can before it’s lost. In my work as a librarian, I am able to merge my experience in marine science research with new skills in digital curation. I believe in open science, open data, and the power of text files.
+
+<aside>
+<img src="images/profile_photo.png" alt="Headshot"
+  title="Amanda's Headshot" width="150" />
+</aside>
 
 **Currently** I am Head Librarian & Bibliographer of the [Harold A. Miller Library](https://library.stanford.edu/hopkins), and Assistant to the Director of [Hopkins Marine Station](https://hopkinsmarinestation.stanford.edu/) at Stanford University. I am also an elected official, serving as a [Trustee](https://www.mpusd.net/apps/pages/index.jsp?uREC_ID=1006448&type=d&pREC_ID=1317626) on the [Monterey Peninsula Unified School District](https://www.mpusd.net/) Board of Education for Trustee Area 3 (Monterey; 2018-2022). I am a mom, a jack of all trades, and a keeper of chickens.
 
